# NJUPT-Embedded-Linux-Design

./: .gitignore  CMakeLists.txt  LICENSE  README.md  broadcast_server.cpp  broadcast_server.h  main.cpp
example/: CMakeLists.txt  bluetooth.c
